--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "backend/run.py",
+        "src": "run.py",
         "use": "@vercel/python"
       }
     ],
