--- a/client/angular.json
+++ b/client/angular.json
@@ -32,7 +32,14 @@
             "scripts": []
           },
           "configurations": {
+
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
